
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int BIGOPTIONLIST ;
 int NPRINTINFO (int ) ;
 int check_for_clear_sector (char*,unsigned short,char*,int) ;
 int debug ;
 int exit (int) ;
 int recount ;

void re_check_sector(char *hostname,unsigned short port,char *logbook,int flag)
{
  debug++;
  if(recount++ >= 10 ){
  NPRINTINFO(BIGOPTIONLIST);
  exit(1);
  }
  check_for_clear_sector(hostname,port,logbook,flag);
}
