; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/multiple/remote/extr_805.c_re_check_sector.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/multiple/remote/extr_805.c_re_check_sector.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@debug = common dso_local global i32 0, align 4
@recount = common dso_local global i32 0, align 4
@BIGOPTIONLIST = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @re_check_sector(i8* %0, i16 zeroext %1, i8* %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i16, align 2
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i16 %1, i16* %6, align 2
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load i32, i32* @debug, align 4
  %10 = add nsw i32 %9, 1
  store i32 %10, i32* @debug, align 4
  %11 = load i32, i32* @recount, align 4
  %12 = add nsw i32 %11, 1
  store i32 %12, i32* @recount, align 4
  %13 = icmp sge i32 %11, 10
  br i1 %13, label %14, label %18

14:                                               ; preds = %4
  %15 = load i32, i32* @BIGOPTIONLIST, align 4
  %16 = call i32 @NPRINTINFO(i32 %15)
  %17 = call i32 @exit(i32 1) #3
  unreachable

18:                                               ; preds = %4
  %19 = load i8*, i8** %5, align 8
  %20 = load i16, i16* %6, align 2
  %21 = load i8*, i8** %7, align 8
  %22 = load i32, i32* %8, align 4
  %23 = call i32 @check_for_clear_sector(i8* %19, i16 zeroext %20, i8* %21, i32 %22)
  ret void
}

declare dso_local i32 @NPRINTINFO(i32) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @check_for_clear_sector(i8*, i16 zeroext, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
